--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.5|^8.0"
     },
     "autoload": {
         "psr-4": {
