--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=7.2",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.5|^8.0"
+        "phpunit/phpunit": "^7.5|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
