Register TestResponse macro

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,12 @@
         "psr-4": {
             "JMac\\Testing\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "JMac\\Testing\\AdditionalAssertionsServiceProvider"
+            ]
+        }
     }
 }
