Install packages and add files for testing

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
                 "JMac\\Testing\\AdditionalAssertionsServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "orchestra/testbench": "^6.2"
     }
 }
