Simplify autoloading the dummy controller

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
             "JMac\\Testing\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
