--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.5|^8.0|^9.0"
+        "php": ">=7.3",
+        "illuminate/testing": "^8.0",
+        "mockery/mockery": "^1.4.2",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
