--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/testing": "^9.0|^10.0|^11.0",
-        "mockery/mockery": "^1.4.2",
-        "phpunit/phpunit": "^9.3.3|^10.0"
+        "php": "^8.1",
+        "illuminate/testing": "^10.0|^11.0",
+        "mockery/mockery": "^1.4.4",
+        "phpunit/phpunit": "^10.1"
     },
     "autoload": {
         "psr-4": {
