--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/testing": "^10.0|^11.0",
+        "illuminate/testing": "^10.0|^11.0|^12.0",
         "mockery/mockery": "^1.4.4",
         "phpunit/phpunit": "^10.1|^11.0"
     },
