--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "^8.1",
         "illuminate/testing": "^11.0|^12.0",
         "mockery/mockery": "^1.4.4",
-        "phpunit/phpunit": "^10.1|^11.0"
+        "phpunit/phpunit": "^10.1|^11.0|^12.0"
     },
     "autoload": {
         "psr-4": {
